[gd_scene load_steps=4 format=3 uid="uid://c441awoxm7so8"]

[ext_resource type="Script" uid="uid://h4b2mtnq2j13" path="res://pre_intro.gd" id="1_jawj2"]
[ext_resource type="Texture2D" uid="uid://17qybdqu7l2x" path="res://art/Intro/PreIntro.png" id="2_tr2iv"]
[ext_resource type="FontFile" uid="uid://3e6lkolbiipn" path="res://art/Intro/fontPreIntro.png" id="3_tr2iv"]

[node name="PreIntro" type="Node2D"]
script = ExtResource("1_jawj2")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_tr2iv")

[node name="next_char" type="Timer" parent="."]

[node name="next_message" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
offset_left = 521.0
offset_top = 561.0
offset_right = 906.0
offset_bottom = 698.0
theme_override_fonts/font = ExtResource("3_tr2iv")
theme_override_font_sizes/font_size = 50

[connection signal="timeout" from="next_char" to="." method="_on_next_char_timeout"]
[connection signal="timeout" from="next_message" to="." method="_on_next_message_timeout"]
